[gd_scene load_steps=6 format=3 uid="uid://ceuqsktlo5w44"]

[ext_resource type="Script" path="res://Scripts/quicksand.gd" id="1_k6x3j"]
[ext_resource type="Shader" path="res://Shaders/Quicksand.gdshader" id="2_umynj"]
[ext_resource type="Texture2D" uid="uid://dmexdb58mcvqn" path="res://Assets/Sprites/Traps/Quicksand.png" id="3_n8r5r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g28tc"]
shader = ExtResource("2_umynj")
shader_parameter/amplitutde = Vector2(0.1, 0)
shader_parameter/speed = Vector2(8, 0)
shader_parameter/color = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6wgud"]
size = Vector2(64, 57)

[node name="Quicksand" type="Sprite2D"]
material = SubResource("ShaderMaterial_g28tc")
texture = ExtResource("3_n8r5r")

[node name="Quicksand" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_k6x3j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quicksand"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_6wgud")

[node name="SinkingTime" type="Timer" parent="Quicksand"]
wait_time = 2.0

[connection signal="body_entered" from="Quicksand" to="Quicksand" method="_on_body_entered"]
[connection signal="timeout" from="Quicksand/SinkingTime" to="Quicksand" method="_on_sinking_time_timeout"]
